kubernetes/felix/service-dashboard.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: felix-dashboard

spec:
  selector:
    app.kubernetes.io/name: felix
    app.kubernetes.io/instance: felix
  ports:
  - name: dashboard
    protocol: TCP
    port: 9119
    targetPort: dashboard
