kubernetes/felix/service-webhook.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: felix-webhook

spec:
  selector:
    app.kubernetes.io/name: felix
    app.kubernetes.io/instance: felix
  ports:
  - name: webhook
    protocol: TCP
    port: 8644
    targetPort: webhook
