kubernetes/felix/service-www.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: felix-www

spec:
  selector:
    app.kubernetes.io/name: felix
    app.kubernetes.io/instance: felix
  ports:
  - port: 8080
    targetPort: www
    protocol: TCP
    name: www
