kubernetes/felix/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: felix

spec:
  selector:
    app.kubernetes.io/name: felix
    app.kubernetes.io/instance: felix
  ports:
  - name: gateway
    protocol: TCP
    port: 8642
    targetPort: gateway
