kubernetes/felix/ingress-www.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: felix-www
  namespace: felix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ak-type: simple
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Felix
    gethomepage.dev/description: Personal Assistant
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-robot
    gethomepage.dev/pod-selector: app.kubernetes.io/name=felix

spec:
  tls:
  - hosts:
    - felix.k.oneill.net
    secretName: felix-www-tls
  rules:
  - host: felix.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: felix-www
            port:
              number: 8080
