kubernetes/felix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: felix
  namespace: felix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
  - hosts:
    - felix-gateway.k.oneill.net
    secretName: felix-gateway-tls
  rules:
  - host: felix-gateway.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: felix
            port:
              number: 8642
