kubernetes/felix/tailscale-ingress-webhook.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: felix-webhook-tailscale
  namespace: felix
  annotations:
    tailscale.com/tags: tag:felix

spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - felix-webhook
  rules:
  - http:
      paths:
      - path: /webhooks
        pathType: Prefix
        backend:
          service:
            name: felix-webhook
            port:
              number: 8644
